category and author hover link in dark mode - fix

--- a/themes/jeo-theme/assets/scss/5-pages/_p-search.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-search.scss
@@ -374,5 +374,23 @@
         form.search-form .filters--item .select2-selection__choice {
             background-color: var(--primary-opacity-1);
         }
+
+        .cat-links {
+            a {
+                &:hover {
+                    opacity: 0.7;
+                    color: #767676;
+                }
+            }
+        }
+
+        .entry-meta .byline{ 
+            a {
+                &:hover {
+                    opacity: 0.7;
+                    color: #767676;
+                }
+            }
+        }
     }
 }
